# Bhism

./: .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: .gitignore  Cargo.toml  Dockerfile  ca.pem  package-lock.json  package.json
backend/src/: env_config.ts  index.ts  main.rs
backend/src/config/: db_config.ts  db_mongo.rs
backend/src/models/: auth.rs  mod.rs  otp.rs
backend/src/routes/: auth.rs  otp.rs
backend/src/routes/auth/: auth.ts
backend/src/routes/doctors/: doctors.ts
backend/src/routes/otp/: otp.ts
backend/src/routes/user/: user.ts
backend/src/routes/whatsappbot/: index.ts
backend/src/schema/: doctor_schema.ts  otp_schema.ts  user_schema.ts
backend/src/services/: auth_service.rs  otp_service.rs  otp_services.rs
backend2/: .gitignore
backend2/src/: main.rs
backend2/src/config/: db_mongo.rs
backend2/src/models/: otp.rs
backend2/src/routes/: auth.rs
backend2/src/services/: mod.rs  otp_service.rs
chatbot/: .env  .gitignore  Dockerfile  main.py  readme.md
chatbot/Scripts/: activate  activate.bat
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AuthGuard.tsx  BedAvailabilityComponent.tsx  BloodBankComponent.tsx  Disclaimer.css  Disclaimer.tsx  ExploreContainer.tsx  ForgotPassword.tsx  HomeComponent.tsx  InventoryManagement.tsx  LabManagement.css  LabManagementComponent.tsx  Login.tsx  LoginForm.css  Menu.tsx  NotificationPanel.tsx  OPDBookingComponent.tsx  Signup.tsx  StaffComponent.tsx  (+6 more)
(+25 files in other folders)
