[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2.0"
lettre = { version = "0.11.8", features = ["smtp-transport", "builder"] }
tokio = { version = "1.40.0", features = ["full"] }
lettre_email = "0.9.4"
futures = "0.3.30"
anyhow = "1.0.86"
awc = "3.5.1"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"]  
